--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,10 +14,9 @@ php:
   stage: test
   image: roelofr/php-node:cli
   before_script:
-    - composer require --no-progress --no-suggest squizlabs/php_codesniffer
+    - composer install --dev --no-progress --no-suggest
   script:
-    - find . -maxdepth 1 -type f -name '*.php' -print -exec php -l \{\} \;
-    - ./vendor/bin/phpcs
+    - composer test
   cache:
     paths:
       - ~/.config/composer
